--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hcaptcha/react-hcaptcha": "^1.4.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.4",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "jsonwebtoken": "^8.5.1",
