--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.2.3",
     "next-useragent": "^2.8.0",
     "nookies": "^2.5.2",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
