finish up participant screen

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.142.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@hcaptcha/react-hcaptcha": "^1.4.4",
@@ -17,6 +18,12 @@
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
+    "form-data": "^4.0.0",
+    "formidable": "^2.0.1",
+    "imagemin": "^8.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-webp": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.3",
     "next-useragent": "^2.8.0",
