--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "nookies": "^2.5.2",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "eslint": "8.21.0",
