--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prisma": "npx prisma db push && npx prisma generate",
     "dev": "next dev -p 3001",
-    "build": "next build",
+    "build": "yarn prisma && next build",
     "start": "next start -p 3001",
     "lint": "next lint"
   },
@@ -16,6 +17,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
+    "@prisma/client": "^4.1.1",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "form-data": "^4.0.0",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
+    "prisma": "^4.1.1",
     "sass": "^1.54.1"
   }
 }
