--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@prisma/client": "^4.1.1",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.1",
     "form-data": "^4.0.0",
     "formidable": "^2.0.1",
